src/main/resources/static/css/global.css
@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700);

/* PRELOADER START */
body {
    overflow: hidden;
    background: #F5F5F5;

}

html {
    overflow-x: hidden;
}

.container {
    padding-bottom: 80px;
    padding-top: 10px;
    min-height: 100vh;
}

.padding-container {
    padding: 10px;
    padding-top: 0;
}

/* Preloader */
#preloader {
    position: fixed;
    top:0;
    left:0;
    right:0;
    bottom:0;
    background-color: #262626; /* change if the mask should have another color then white */
    z-index:99999999999; /* makes sure it stays on top */
}

#status {
    width:200px;
    height:200px;
    position:absolute;
    left:50%; /* centers the loading animation horizontally one the screen */
    top:50%; /* centers the loading animation vertically one the screen */
    background-image:url("../img/loader.svg"); /* path to your loading animation */
    background-repeat:no-repeat;
    background-position:center;
    margin:-100px 0 0 -100px; /* is width and height divided by two */
    z-index:99999999999;
}

.splash-container {
    position: relative;
    width: 100%;
    height: calc(100vh - 77px);
    background: url("../img/world.jpg");
    background-size: cover;
    background-position:center;

}


nav a {
    text-decoration: none;
    color: #fff;
}

blockquote {
    width: 100%;
     font-family: 'Droid Serif', serif;

    padding: 36px 50px;
    position: relative;
    background: #dfc6cf;
    margin-bottom: 28px;
    margin-top:20px;
}

blockquote::before,  blockquote::after {
    top: 0;
    bottom: 0;
    width: 25px;
    content: '';
    position: absolute;
    background: #c64860;
    box-shadow: 0 2px rgba(0, 0, 0, 0.25);
}

blockquote::before {
    right: 100%;
}

blockquote::after {
    left: 100%;
}
 blockquote p {
    margin: 0;
    font-size: 2.5em;
}
 blockquote p::before {
     top: -58px;
     left: 3px;
     color: #fff;
     content: '“';
     font-size: 3em;
     position: absolute;
     text-shadow: 3px 0 #c64860;
}
 blockquote p::after {
     right: 3px;
     color: #fff;
     content: '”';
     bottom: -123px;
     font-size: 3em;
     position: absolute;
     text-shadow: 3px 0 #c64860;
}

.logo-big {
    width:50vw;

}


/*CHART CSS*/


#radar-chart {
    width: 100%;
    height:100%;
}

#crime-chart {
    width: 100%;
    height: 50vh;
}

.modal-body {
    margin-left: 1rem;
}

.hvr-underline-reveal:before {
    content: "";
    position: absolute;
    z-index: -1;
    left: 0;
    right: 0;
    bottom: 0;
    background: #d15762;
    height: 4px;
    -webkit-transform: translateY(4px);
    transform: translateY(4px);
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}
.hvr-underline-reveal:hover:before, .hvr-underline-reveal:focus:before, .hvr-underline-reveal:active:before {
    -webkit-transform: translateY(0);
    transform: translateY(0);
}



.row-full-screen {
    min-height: calc(100vh - 65px);
}

.row-dark {
    background: #b0b0b0;
    padding: 15px;
}

ul {
    list-style-type:none;
    padding:0px;
    margin:0px;

}

.state-bg-photo {
background-size: cover;
    min-height: 346px;
    max-height: 346px;
}

#state-profile .card {
    border: 1px solid #4c3e40;
}
#state-profile .title-card {
    background: rgba(0,0,0,0.5);
}

#state-profile .card-body {
    background: rgba(255,255,255,0.4);
    height: 100%;
}

#state-profile .state {
    height: 100%;;
}

#state-profile h3 {
    margin-bottom: 0;
}

.avatar-img {
    width: 125px;
    height: 125px;
    -webkit-border-radius: 75px;
    -moz-border-radius: 75px;
    border-radius: 75px;
    border: 2px solid pink;
    position:relative;
    top: -121px;
    left: -54px;
}

.avatar-img-other {
    width: 125px;
    height: 125px;
    -webkit-border-radius: 75px;
    -moz-border-radius: 75px;
    border-radius: 75px;
    border: 2px solid pink;

}

.message-avatar {
    border: 2px solid pink;
    width: 25px;
    height: 25px;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
}

.message-md-avatar {
    border: 2px solid pink;
    width: 50px;
    height: 50px;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
}

#profile-user{
    min-height: 346px;
    max-height: 346px;
}


#profile-user h3{
    padding-left: 110px;
}

.profile-item {
    color: #d15762;
    font-size: 1.5em;
    padding-top: 10px;
    padding-right: 10px;
    font-weight: bold;
}
.profile-value {
    font-size: 1.25em;
    padding-top: 15px;
}
.profile-data {
    padding-left: 20px;
    position: relative;
    top: -165px;
    overflow: hidden;
}

.profile-data p {
    color: rgba(99, 99, 99, 0.8);
    padding-left: 60px;
}

#profile-user h3 {
    padding-left: 110px;
}

.state-ranking {
    width: 150px;
    height: 150px;
    border-top-left-radius: 200px;
    position: relative;
    background-color: rgba(209, 87, 98, 0.65);
    bottom: 29px;
    right: -127px;
}


@media only screen and (max-width : 1199px) {

    .state-ranking {
        bottom: 29px;
        right: -83px;
    }

}


@media only screen and (max-width : 991px) {

    .state-ranking {
        bottom: 29px;
        right: -24px;
    }

}


@media only screen and (max-width : 786px) {


    .state-ranking {
        bottom: 29px;
        right: -111px;
    }

}


.state-user-rank {
    font-size: 3em;
    color: #fff;
    font-weight: bold;
    position: relative;
    right: -45px;
    bottom: -38px;

}

.state-ranking-link {
    color: #e2e2e2;
    font-weight: bold;
    position: relative;
    right: -29px;
    bottom: -47px;
}


#header-nav {
    z-index: 11;
}

nav .btn-secondary {
    background-color: transparent;
    border: none;
}


.profile-nav {
    position: sticky;
    position: -webkit-sticky;
    top: 0; /* required */
    z-index: 1;
    background-color: rgba(255,255,255,1);
    border-bottom: 2px solid pink;
}

.profile-footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #d29292;
    color: white;
    text-align: center;
    z-index: 20;
}

.message-conversation {
    height: calc(100vh - 252px);
    width: 80%;
    overflow-x: hidden;
    overflow-y: scroll;
    border-left: 1px solid #f6bfbe;
    border-right: 1px solid #f6bfbe;
    padding-bottom: 20px;
}

.message-header {
    width: 80%;
    border-left: 1px solid #f6bfbe;
    border-right: 1px solid #f6bfbe;
    border-bottom: 1px solid #f6bfbe;

}


.speech-bubble-right {
    position: relative;
    color:white;
    background: #e10071;
    border-radius: .4em;
    width: calc(49% - 125px);
    min-height: 60px;
    padding: 10px;
    margin-top: 20px;
    margin-right: 20px;
    float: right;
}

.speech-bubble-right:after {
    content: '';
    position: absolute;
    right: 0;
    top: 50%;
    width: 0;
    height: 0;
    border: 20px solid transparent;
    border-left-color: #e10071;
    border-right: 0;
    border-top: 0;
    color: #fff;
    margin-top: -10px;
    margin-right: -20px;
}

.speech-bubble-left {
    position: relative;
    background: #ff80c0;
    border-radius: .4em;
    width: calc(47% - 125px);
    min-height: 60px;
    padding: 10px;
    margin-top: 20px;
    color: #fff;

    margin-left: 20px;
    float: left;
}

.speech-bubble-left:after {
    content: '';
    position: absolute;
    left: 0;
    top: 50%;
    width: 0;
    height: 0;
    border: 20px solid transparent;
    border-right-color: #ff80c0;
    border-left: 0;
    border-top: 0;
    margin-top: -10px;

    margin-left: -20px;
}

.profile-footer-container {
    width: 80%;
    border-left: 1px solid #f6bfbe;
    border-right: 1px solid #f6bfbe;
}

.message-send {
    width: 100%;
    height: 46px;
    padding-left: 20px;
}

/*wrapper for ribboin*/


.unread-badge {
    position:relative;
}
.unread-badge[data-badge]:after {
    content:attr(data-badge);
    position:absolute;
    top: 7px;
    right: 2px;
    font-size:.65em;
    background:#d04d4d;

    width:20px;height:20px;
    text-align:center;
    line-height:18px;
    border-radius:50%;

    /*box-shadow:0 0 1px #333;*/
}


#state-profile h3 {
    color: #e65252;
}

